# cookiecutter-mypypkg

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  README.md  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py
