[metadata]
name = {{ cookiecutter.project_slug }}
# TODO: use bumpversion here?
version = {{ cookiecutter.version }}
author = {{ cookiecutter.author }}
author-email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}

[options]
install_requires =

python_requires = >={{ cookiecutter.minimum_py_version }}
# tests_require is used by python setup.py test
# To use it with pytest, would instead use extras_requires!
tests_require =
    coverage
    pytest
package_dir =
    =src
packages = find:

[options.extras_require]
dev =
    coverage
    matplotlib
    pytest

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.__main__:cli